--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="error"></div>
     
             </div>
-            <button type="submit">Register</button>
+            <button type="submit">Submit</button>
         </form>
     </div>
     
